--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             text-align: center;
         }
 
+        /* Высокая фотография для десктопов */
         .photo-container {
             width: 100%;
             height: 650px;
@@ -96,6 +97,20 @@
             overflow: hidden;
             margin-bottom: 15px;
             position: relative;
+        }
+
+        /* Горизонтальная фотография для мобильных устройств */
+        @media (max-width: 768px) {
+            .photo-container {
+                height: 250px; /* Меньшая высота для горизонтальной ориентации */
+            }
+        }
+
+        /* Очень маленькие экраны */
+        @media (max-width: 480px) {
+            .photo-container {
+                height: 200px;
+            }
         }
 
         .our-photo {
@@ -113,6 +128,7 @@
             font-style: italic;
             color: #7b1fa2;
             font-size: 1.1rem;
+            margin-top: 10px;
         }
 
         .wishes {
@@ -315,6 +331,11 @@
             .final-wish p {
                 font-size: 1.2rem;
             }
+
+            /* Делаем фото горизонтальным на мобильных */
+            .photo-frame {
+                max-width: 100%;
+            }
         }
     </style>
 </head>
@@ -323,7 +344,7 @@
         <header>
             <h1>С Днем Рождения! <i class="fas fa-birthday-cake birthday-icon"></i></h1>
             <div class="friend-name" id="friendName">Дорогая Настя!</div>
-            <div class="birthday-date" id="birthdayDate">27 мая 2023</div>
+            <div class="birthday-date" id="birthdayDate">Тебе сегодня 20</div>
             <p>Этот сайт создан специально для тебя!</p>
         </header>
 
@@ -333,12 +354,11 @@
                 <div class="photo-container">
                     <img src="photo.jpg" alt="Наша фотография" class="our-photo">
                 </div>
-
             </div>
 
             <div class="wishes">
                 <h2>Поздравление</h2>
-                <p> Дорогая Настя, сегодня тебе уже 20 лет, и это уже не детский возраст. За все эти года ты научилась многому, узнала, что тебе нравится, а что нет, как правильно поступать, а как не стоит. Все сложности, которые были в твоей жизни, сформировали тебя такую, которой ты являешься сейчас. Ты очень хороший человек, Насть, с сильным характером и мощными амбициями. Ты умна и невероятно красива, и самое главное в тебе, что ты не желаешь никому зла. Я желаю тебе самых верных и преданных людей в твоём кругу, оставаться сильной в трудные моменты, улыбаться почаще и меньше плакать. Любая мечта может сбыться, Насть, самое главное только погнаться за ней. И достичь тебе той финансовой независимости, о которой ты мечтаешь.</p>
+                <p>Дорогая Настя, сегодня тебе уже 20 лет, и это уже не детский возраст. За все эти года ты научилась многому, узнала, что тебе нравится, а что нет, как правильно поступать, а как не стоит. Все сложности, которые были в твоей жизни, сформировали тебя такую, которой ты являешься сейчас. Ты очень хороший человек, Насть, с сильным характером и мощными амбициями. Ты умна и невероятно красива, и самое главное в тебе, что ты не желаешь никому зла. Я желаю тебе самых верных и преданных людей в твоём кругу, оставаться сильной в трудные моменты, улыбаться почаще и меньше плакать. Любая мечта может сбыться, Насть, самое главное только погнаться за ней. И достичь тебе той финансовой независимости, о которой ты мечтаешь.</p>
                 <p>С днем рождения, самая дорогая и лучшая девушка по имени Настя!</p>
             </div>
         </div>
@@ -380,9 +400,6 @@
             </div>
         </div>
 
-
-
-
         <footer>
             <div class="hearts">
                 <i class="fas fa-heart"></i>
@@ -399,7 +416,7 @@
         const config = {
             friendName: "Настя",
             birthdayDate: "Тебе сегодня 20",
-            year: "" //
+            year: ""
         };
 
         // Устанавливаем имя и дату
@@ -467,5 +484,4 @@
         });
     </script>
 </body>
-
 </html>
