--- a/index.html
+++ b/index.html
@@ -97,19 +97,38 @@
             overflow: hidden;
             margin-bottom: 15px;
             position: relative;
+            cursor: pointer;
+            transition: transform 0.3s ease;
         }
 
-        /* Горизонтальная фотография для мобильных устройств */
+        .photo-container:hover {
+            transform: scale(1.02);
+        }
+
+        .photo-container:hover::after {
+            content: "Нажми для увеличения";
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 8px;
+            font-size: 0.9rem;
+            text-align: center;
+        }
+
+        /* Увеличенная фотография для мобильных устройств */
         @media (max-width: 768px) {
             .photo-container {
-                height: 550px; /* Меньшая высота для горизонтальной ориентации */
+                height: 500px; /* Увеличенная высота в 2 раза (было 250px) */
             }
         }
 
         /* Очень маленькие экраны */
         @media (max-width: 480px) {
             .photo-container {
-                height: 550px;
+                height: 400px; /* Увеличенная высота (было 200px) */
             }
         }
 
@@ -129,6 +148,54 @@
             color: #7b1fa2;
             font-size: 1.1rem;
             margin-top: 10px;
+        }
+
+        /* Стили для полноэкранного режима */
+        .fullscreen-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+
+        .fullscreen-overlay.active {
+            display: flex;
+        }
+
+        .fullscreen-image {
+            max-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
+            border-radius: 10px;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
+        }
+
+        .close-fullscreen {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: white;
+            font-size: 2.5rem;
+            background: rgba(0, 0, 0, 0.5);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .close-fullscreen:hover {
+            background: rgba(233, 30, 99, 0.8);
         }
 
         .wishes {
@@ -340,6 +407,14 @@
     </style>
 </head>
 <body>
+    <!-- Оверлей для полноэкранного просмотра фото -->
+    <div class="fullscreen-overlay" id="fullscreenOverlay">
+        <div class="close-fullscreen" id="closeFullscreen">
+            <i class="fas fa-times"></i>
+        </div>
+        <img src="photo.jpg" alt="Наша фотография" class="fullscreen-image" id="fullscreenImage">
+    </div>
+
     <div class="container">
         <header>
             <h1>С Днем Рождения! <i class="fas fa-birthday-cake birthday-icon"></i></h1>
@@ -351,9 +426,10 @@
         <div class="hero-section">
             <div class="photo-frame">
                 <h2>Наше лучшее фото</h2>
-                <div class="photo-container">
+                <div class="photo-container" id="photoContainer">
                     <img src="photo.jpg" alt="Наша фотография" class="our-photo">
                 </div>
+
             </div>
 
             <div class="wishes">
@@ -422,6 +498,41 @@
         // Устанавливаем имя и дату
         document.getElementById('friendName').textContent = config.friendName + "!";
         document.getElementById('birthdayDate').textContent = config.birthdayDate + " " + config.year;
+
+        // Элементы для полноэкранного просмотра
+        const photoContainer = document.getElementById('photoContainer');
+        const fullscreenOverlay = document.getElementById('fullscreenOverlay');
+        const fullscreenImage = document.getElementById('fullscreenImage');
+        const closeFullscreen = document.getElementById('closeFullscreen');
+
+        // Открытие фото на весь экран
+        photoContainer.addEventListener('click', function() {
+            fullscreenOverlay.classList.add('active');
+            document.body.style.overflow = 'hidden'; // Отключаем прокрутку
+        });
+
+        // Закрытие полноэкранного режима
+        closeFullscreen.addEventListener('click', function(e) {
+            e.stopPropagation();
+            fullscreenOverlay.classList.remove('active');
+            document.body.style.overflow = 'auto'; // Включаем прокрутку
+        });
+
+        // Закрытие при клике на оверлей
+        fullscreenOverlay.addEventListener('click', function(e) {
+            if (e.target === fullscreenOverlay) {
+                fullscreenOverlay.classList.remove('active');
+                document.body.style.overflow = 'auto'; // Включаем прокрутку
+            }
+        });
+
+        // Закрытие по клавише Escape
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape' && fullscreenOverlay.classList.contains('active')) {
+                fullscreenOverlay.classList.remove('active');
+                document.body.style.overflow = 'auto'; // Включаем прокрутку
+            }
+        });
 
         // Создаем конфетти
         function createConfetti() {
